@@ -3,6 +3,13 @@ support are in ChangeLog. - Don
 
 Date	Version	Description
 -------	-------	------------------------------------------------------
+		Dave Schooler <dave@stashtea.com> reported that send -s wasn't
+		handling certains chars correctly.  Turned out to be those
+		that had multibyte UTF8 reps.  send -s was just pumping out
+		hunks of bytes without regard to UTF boundaries and evidentally
+		Tcl's I/O engine thought that it should translate a partial
+		UTF8 character into, uh, something else.
+
 4/16/02 5.37.2	Multixterm couldn't find man page all the time.
 
 4/16/02 5.37.1	Made multixterm handle user-supplied args.
